# reloc.tk

./: README.md  crypt.py  db.db  db_control.py  main.py  mongodb.py  pgp.txt  pyproject.toml
.gnupg/: pubring.kbx  pubring.kbx~  random_seed  trustdb.gpg
.gnupg/openpgp-revocs.d/: 27BF15E8A1149B6824BF3CDF2081C4A6B70902EE.rev
.gnupg/private-keys-v1.d/: 55A62E99FE1843CE7132AB9FF5F7470B42532041.key  886378461BB2032A998BB38A1EFD661FC5281B9C.key
templates/: base.html  contact.html  home.html  links.html  login.html  pgp.html  register.html  urls.html
