[tool.poetry]
name = "repl_python3_beta_ddotbtk"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^2.0.0"
flask-simplelogin = "^0.0.7"
sqlcipher3 = "^0.4.5"
sqlcipher3-binary = "^0.4.5"
pysqlcipher3 = "^1.0.4"
peewee = "^3.14.4"
pytz = "^2021.1"
WTForms = "^2.3.3"
flask-wtf = "^0.15.1"
Flask-Bootstrap4 = "^4.0.2"
Flask-Compress = "^1.10.1"
email-validator = "^1.1.3"
python-gnupg = "^0.4.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
